--- a/ISRUThanksButNoTanks.cfg
+++ b/ISRUThanksButNoTanks.cfg
@@ -1,5 +1,11 @@
+// ISRUThanksButNoTanks.cfg 1.0.0.1
+// QuickBASIC's ISRUThanksButNoTanks (QBTT)
+// created: 
+// updated: 06 Sep 2021
+
 //Stock ISRU
-@PART[ISRU] {
+@PART[ISRU]:NEEDS[ISRUThanksButNoTanks]:FOR[ISRUThanksButNoTanks]
+{
 	%RESOURCE
 		{
 			name = Ore
@@ -7,7 +13,8 @@
 			maxAmount = 2
 		}
 }
-@PART[MiniISRU] {
+@PART[MiniISRU]:NEEDS[ISRUThanksButNoTanks]:FOR[ISRUThanksButNoTanks]
+{
 	%RESOURCE
 		{
 			name = Ore
@@ -17,7 +24,8 @@
 }
 
 //Stockalike Mining Extension
-@PART[SMX_Mk2ISRURefinery]:NEEDS[MiningExpansion]:AFTER[MiningExpansion] {
+@PART[SMX_Mk2ISRURefinery]:NEEDS[MiningExpansion,ISRUThanksButNoTanks]:AFTER[MiningExpansion] 
+{
 	%RESOURCE
 		{
 			name = Ore
@@ -25,7 +33,8 @@
 			maxAmount = 1
 		}
 }
-@PART[SMX_Size0ISRU]:NEEDS[MiningExpansion]:AFTER[MiningExpansion] {
+@PART[SMX_Size0ISRU]:NEEDS[MiningExpansion,ISRUThanksButNoTanks]:AFTER[MiningExpansion] 
+{
 	%RESOURCE
 		{
 			name = Ore
@@ -33,7 +42,8 @@
 			maxAmount = 0.5
 		}
 }
-@PART[SMX_Size3ISRU]:NEEDS[MiningExpansion]:AFTER[MiningExpansion] {
+@PART[SMX_Size3ISRU]:NEEDS[MiningExpansion,ISRUThanksButNoTanks]:AFTER[MiningExpansion] 
+{
 	%RESOURCE
 		{
 			name = Ore
@@ -41,3 +51,6 @@
 			maxAmount = 4
 		}
 }
+
+// Expat-MIT
+// zer0Kerbal
