--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
-GameData/
+# GameData/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
